<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="32dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/education"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_login_header"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/string_login_subheader"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"/>




        <TextView
            android:text="@string/string_email"
            style="@style/TextView_Style"
            android:layout_marginTop="32dp"/>


        <EditText
            style="@style/EditText_Style"
            android:inputType="textEmailAddress"
            android:id="@+id/etLoginEmail"
            android:imeOptions="actionNext"
            android:background="@drawable/edit_text_background"
            android:hint="@string/string_email"/>

        <TextView
            style="@style/TextView_Style"
            android:text="@string/string_password" />

        <EditText
            style="@style/EditText_Style"
            android:inputType="textPassword"
            android:id="@+id/etLoginPassword"
            android:imeOptions="actionDone"
            android:background="@drawable/edit_text_background"
            android:hint="@string/string_password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:textSize="16sp"
            android:id="@+id/btnLogin"
            android:text="@string/string_login"/>
        <TextView
            style="@style/TextView_Style"
            android:id="@+id/tvSignUpLink"
            android:fontFamily="@font/roboto_mediumitalic"
            android:text="@string/string_signup_link"
            android:gravity="center" />

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            style="@style/TextView_Style"
            android:fontFamily="@font/roboto_lightitalic"
            android:id="@+id/tvOptionsLogin"
            android:text="@string/string_signin_options"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center">


            <ImageView
                style="@style/registration_ImageView_style"
                android:id="@+id/IVGoogle"
                android:src="@drawable/google" />

            <ImageView
                android:id="@+id/IVFacebook"
                android:src="@drawable/facebook"
                style="@style/registration_ImageView_style" />

            <ImageView
                style="@style/registration_ImageView_style"
                android:id="@+id/IVLoginInsta"
                android:src="@drawable/instagram" />
            <ImageView
                style="@style/registration_ImageView_style"
                android:id="@+id/IVLogintwitter"
                android:src="@drawable/twitter" />

        </LinearLayout>

    </LinearLayout>




</ScrollView>