<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".uploadimage.ui.view.UploadImageFragment">

    <ImageView
        android:id="@+id/ivCapturedImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/selectedImage"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



        <Button
            android:id="@+id/btnSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFF"
            android:layout_marginTop="50dp"
            android:text="@string/select_image"
            android:backgroundTint="@color/news_color"
            app:layout_constraintTop_toBottomOf="@id/ivCapturedImage"
            app:layout_constraintEnd_toStartOf="@id/btnUpload"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/news_color"
            android:text="@string/upload_image"
            app:layout_constraintTop_toBottomOf="@id/ivCapturedImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSelect"/>



        <TextView
            android:id="@+id/tvSuccessHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/success"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSelect"
            app:layout_constraintBottom_toTopOf="@id/tvStatusHeadline"
            />

        <TextView
            android:id="@+id/tvSuccess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@id/tvSuccessHeadline"
            app:layout_constraintTop_toTopOf="@id/tvSuccessHeadline"
            app:layout_constraintStart_toEndOf="@id/tvSuccessHeadline"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/tvStatusHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/status_code"
            android:visibility="gone"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSuccessHeadline"/>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@id/tvStatusHeadline"
            app:layout_constraintStart_toEndOf="@id/tvStatusHeadline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tvStatusHeadline"/>



</androidx.constraintlayout.widget.ConstraintLayout>